fixes after testing on iPhone

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -65,7 +65,8 @@ nav {
         display: flex;
         flex-direction: row;
         justify-content: center;
-
+        overflow: scroll;
+        
         .logo {
             position: absolute;
             left: calc(50% - 100px);
